stash text edits

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -132,7 +132,7 @@ All statistical analyses in the present study were carried out using the statsmo
 
 \section{Results}
 
-For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05) and a strong event effect size (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. Note also how during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature (Figure 2A).
+For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05) and a strong event effect size (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (i.e., different slopes for before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. Note also how during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature (Figure 2A).
 
 Despite the similar effect size at the three tower sites during the abnormal release event, they differed substantially in the degree to which they uniquely flagged the known release event. At the BE-Lon and BE-Vie sites, our event detection algorithm identified the known release and only a few other time periods as potential abnormal releases (Figure 3). Conversely, at the northerly BE-Bra site, the algorithm was not able to identify the known release event distinct from background noise. This can be seen in the rate of event detections ($\alpha$) at each site, calculated as the number of event detections divided by the total number of rolling windows in the period of record. This rate was less than 1\% at the BE-Lon and BE-Vie sites, but was greater than 2\% at the BE-Bra site. It is notable that this ability to uniquely detect the known release along with a plausible number of additional event detections corresponds with the fraction of the abnormal release period when the wind was pointed from the release location towards the respective tower. The fraction of the period of record where the wind was pointed from the facility toward the flux towers was much lower at the BE-Bra site (5\%) compared to the BE-Lon and BE-Vie sites (34\% Table 1). 
 
@@ -183,7 +183,7 @@ For the Fukushima case study, our objective was to test the sensitivity of our a
 \end{figure}
 
 \section{Discussion}
-Using flux tower records collected closest to and in the prevailing wind direction to the IRE and the Fukushima release locations, our event detection algorithm was able to identify both known abnormal releases and plausible previously unidentified abnormal events. There was broad agreement among the closest flux tower and more distant flux towers as to the timing and frequency of these releases, and our approach was supported by the loss of signal at flux towers outside of the prevailing wind direction. This suggests that, at the very least, given a facility known to have a prior abnormal release, flux tower networks are capable of providing a means of passive monitoring to detect subsequent events as well as information on the environmental conditions before, during, and after the event. Furthermore, our approach has promise for situations when there is not a prior known abnormal release. In these cases, it may be possible to continuously mine flux tower records (as they become available) for events that exceed some threshold identified in a more comprehensive cross-site, cross-event benchmarking study. The delay between data collection and availability to the general community is highly variable among sites and investigators. In the best case scenario, for actively monitored sites with responsive investigators, this can be as little as 6 months. As a result, operationalization of our approach might target post-hoc attribution rather than real-time monitoring applications.
+Using flux tower records collected closest to and in the prevailing wind direction to the IRE and the Fukushima release locations, our event detection algorithm was able to identify both known abnormal releases and plausible previously unidentified abnormal events. There was broad agreement among the closest flux tower and more distant flux towers as to the timing and frequency of these releases, and our approach was supported by the loss of signal at flux towers outside of the prevailing wind direction. This suggests that, at the very least, given a facility known to have a prior abnormal release, flux tower networks are capable of providing a means of passive monitoring to detect subsequent events as well as information on the environmental conditions before, during, and after the event. Furthermore, our approach has promise for situations when there is not a prior known abnormal release. In these cases, it may be possible to continuously mine flux tower records (as they become available) for events that exceed some threshold identified in a more comprehensive cross-site, cross-event benchmarking study. The delay between data collection and availability to the general community via data repositories (e.g., Fluxnet) is highly variable among sites and investigators. In the best case scenario, for actively monitored sites with responsive investigators, this can be as little as 6 months. As a result, operationalization of our approach might target post-hoc attribution rather than real-time monitoring applications.
 
 More generally, we show that flux tower records have value for this type of data mining despite the apparent noisiness of the data \citep[e.g., ][]{fratiniEddyCovarianceFlux2018}. We attribute the sensitivity of our approach to the fact that we fit successive interaction models to limited sections of the data record, and we leveraged bivariate relationships to constrain noisiness in individual data records. Our approach was aided by the fact that this type of scale-free data mining is largely unaffected by systematic errors due to uncertainty in calibration standards and/or low resolution in specific sensor packages deployed on the towers. This is because although such systematic errors may bias the magnitude of overall flux values, which would be a problem for typical uses of flux towers that deal directly in the units of the measured data, they do not reduce the overall confidence in individual values \citep{langfordEddycovarianceDataLow2015}, which for our purposes might represent an abnormal release signal. The ability of our approach to identify a suitable release signature does likely depend on the quality and completeness of the underlying data.
 
