--- a/manuscript/supplement.tex
+++ b/manuscript/supplement.tex
@@ -20,4 +20,8 @@
 
 \input{table_s1}
 
+\noindent Table S2: All possible pairwise combinations of dependent and independent variables for the Fukushima case study (n=51). $R^2$ is the coefficient of determination of a linear model fit to the two covariates for the period of the abnormal release event (corresponding to 'during' in Fig. 2). Effect is the event effect size of the interaction term 'during' the known release period matching the quantile of the distribution as specified by event quantile effect hyperparameter.
+
+\input{table_s1_fukushima}
+
 \end{document}
