--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -113,7 +113,7 @@ For the Fukushima case study, due to the direction of the plume, we gathered mea
 \subsection{Statistical Approach}
 We processed each data file by 1) excluding nighttime measurements based on photosynthetic photon flux density (PPFD > 100 µmol m-2 s-1) or net solar radiation (netrad > 0 $W/m^2$) and 2) defining an “event period” following the publicly released date of the abnormal release. We focused on the following variables as potentially containing a signature of the release : carbon dioxide, carbon dioxide flux (fc), latent heat (le), and sensible heat flux (h). Conversely, the following were treated as independent explanatory variables: wind speed, precipitation, atmospheric pressure, relative humidity, photosynthetic photon flux density, air temperature, and net radiation. Additionally, we used wind direction data from the eddy flux towers to determine when or if any released material might plausibly reach a particular location. All of the aforementioned data for each of these variables obtained from flux tower instrumentation recorded at a 30 minute (min) interval barring any gaps due to missing data.
 
-To begin our analysis, we screened all pairwise, linear relationships between the aforementioned independent and dependent variables using a linear regression fit between each pair for the entire period of record (n=51). Variable pairs were excluded from further analysis if the overall coefficient of determination ($R^2$) was less than 0.1. This low threshold was chosen to maximize the number of pairs that could potentially be investigated more deeply. From visual inspection, we determined that many of the rejected variable pairs appeared to have a nonlinear relationship. As our aim was to develop a methodology that could be applied broadly to other sites, we did not apply transformation to linearize these relationships without a physical justification for the transformation. Evaluating an exhaustive list of data transformations was beyond the scope of the present effort. After identification of candidate variable pairs, we fit an interaction model of the following form where Y represents a continuous response (e.g., $CO_2$, latent heat, etc.), $X_1$ is an independent variable (e.g., air temperature, humidity, etc.), $W_2$ is a categorical variable representing the “period” of observation (i.e., during, before, or after, the event), $\beta$0 is the intercept, $\beta$1,2 are slope parameters for $X_1$ and $W_2$ respectively, and $\beta$3 is the slope parameter for the interaction between $X_1$ and $W_2$:
+To begin our analysis, we screened all pairwise, linear relationships between the aforementioned independent and dependent variables using a linear regression fit between each pair for the entire period of record (Table S1, n=51). Variable pairs were excluded from further analysis if the overall coefficient of determination ($R^2$) was less than 0.1. This low threshold was chosen to maximize the number of pairs that could potentially be investigated more deeply. From visual inspection, we determined that many of the rejected variable pairs appeared to have a nonlinear relationship. As our aim was to develop a methodology that could be applied broadly to other sites, we did not apply transformation to linearize these relationships without a physical justification for the transformation. Evaluating an exhaustive list of data transformations was beyond the scope of the present effort. After identification of candidate variable pairs, we fit an interaction model of the following form where Y represents a continuous response (e.g., $CO_2$, latent heat, etc.), $X_1$ is an independent variable (e.g., air temperature, humidity, etc.), $W_2$ is a categorical variable representing the “period” of observation (i.e., during, before, or after, the event), $\beta$0 is the intercept, $\beta$1,2 are slope parameters for $X_1$ and $W_2$ respectively, and $\beta$3 is the slope parameter for the interaction between $X_1$ and $W_2$:
 
 \[ Y = \beta_0 + \beta_1X_1 + \beta_2W_2 + \beta_3X_1W_2 \]
 
@@ -132,7 +132,7 @@ All statistical analyses in the present study were carried out using the statsmo
 
 \section{Results}
 
-For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05) and a strong event effect size (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (i.e., different slopes for before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. Note also how during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature (Figure 2A).
+For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model and a strong event effect size (Table 1). Note that values in Table S1 are computed relative to the entirety of the data record for variable pair screening purposes, while the values in Table 1 are computed over the known abnormal event period for evaluating event identifiability. Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (i.e., different slopes for before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. Note also how during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature (Figure 2A). A similar pattern is apparent for the BE-Bra and BE-Vie sites (Figure S1, S2).
 
 Despite the similar effect size at the three tower sites during the abnormal release event, they differed substantially in the degree to which they uniquely flagged the known release event. At the BE-Lon and BE-Vie sites, our event detection algorithm identified the known release and only a few other time periods as potential abnormal releases (Figure 3). Conversely, at the northerly BE-Bra site, the algorithm was not able to identify the known release event distinct from background noise. This can be seen in the rate of event detections ($\alpha$) at each site, calculated as the number of event detections divided by the total number of rolling windows in the period of record. This rate was less than 1\% at the BE-Lon and BE-Vie sites, but was greater than 2\% at the BE-Bra site. It is notable that this ability to uniquely detect the known release along with a plausible number of additional event detections corresponds with the fraction of the abnormal release period when the wind was pointed from the release location towards the respective tower. The fraction of the period of record where the wind was pointed from the facility toward the flux towers was much lower at the BE-Bra site (5\%) compared to the BE-Lon and BE-Vie sites (34\% Table 1). 
 
