--- a/manuscript/fluxnet.bib
+++ b/manuscript/fluxnet.bib
@@ -278,3 +278,22 @@
   keywords = {tocite},
   file     = {/Volumes/358572/Zotero/storage/LJ9MHUH9/Gudkov et al. - 2019 - Effect of ionizing radiation on physiological and .pdf}
 }
+
+@article{murrayMethodsQuantifyVariable2009,
+  title      = {Methods to Quantify Variable Importance: Implications for the Analysis of Noisy Ecological Data},
+  shorttitle = {Methods to Quantify Variable Importance},
+  author     = {Murray, Kim and Conner, Mary M.},
+  year       = {2009},
+  month      = feb,
+  journal    = {Ecology},
+  volume     = {90},
+  number     = {2},
+  pages      = {348--355},
+  issn       = {0012-9658, 1939-9170},
+  doi        = {10.1890/07-1929.1},
+  urldate    = {2024-11-12},
+  abstract   = {Determining the importance of independent variables is of practical relevance to ecologists and managers concerned with allocating limited resources to the management of natural systems. Although techniques that identify explanatory variables having the largest influence on the response variable are needed to design management actions effectively, the use of various indices to evaluate variable importance is poorly understood. Using Monte Carlo simulations, we compared six different indices commonly used to evaluate variable importance; zero-order correlations, partial correlations, semipartial correlations, standardized regression coefficients, Akaike weights, and independent effects. We simulated four scenarios to evaluate the indices under progressively more complex circumstances that included correlation between explanatory variables, as well as a spurious variable that was correlated with other explanatory variables, but not with the dependent variable. No index performed perfectly under all circumstances, but partial correlations and Akaike weights performed poorly in all cases. Zero-order correlations was the only measure that detected the presence of a spurious variable, whereas only independent effects assigned overlap areas correctly once the spurious variable was removed. We therefore recommend using zero-order correlations to eliminate predictor variables with correlations near zero, followed by the use of independent effects to assign overlap areas and rank variable importance.},
+  copyright  = {http://onlinelibrary.wiley.com/termsAndConditions\#vor},
+  langid     = {english},
+  keywords   = {tocite}
+}
