--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -106,7 +106,7 @@ We used the signal identified during the known release to identify additional po
 
 \subsection{Data Description}
 
-For both the IRE and Fukushima case studiesy, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) spanning multiple years. For the IRE case study, we targeted towers located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1A). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie, respectively.
+For both the IRE and Fukushima case studies, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) spanning multiple years. For the IRE case study, we targeted towers located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1A). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie, respectively.
 
 For the Fukushima case study, due to the direction of the plume, we gathered measurements from flux towers located in the Northern Hemisphere (Western United States), which are part of the Ameriflux network (https://ameriflux.lbl.gov/). To increase confidence that we are seeing a real effect, we contrasted the results from Northern Hemisphere sites, where we expect a higher likelihood of impact, to measurements from flux towers located in the Southern Hemisphere, which are part of the OzFlux network \citep{cleverly2011alice}. We selected sites with sufficient long-term data to cover the 2011 date of the disaster and excluded boreal sites with extreme snow cover related seasonality. We ultimately selected three sites (US-Wrc, US-GLE, and OZ-Mul, Figure 1B).
 
@@ -132,11 +132,11 @@ All statistical analyses in the present study were carried out using the statsmo
 
 \section{Results}
 
-For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model and a strong event effect size (Table 1). Note that values in Table S1 are computed relative to the entirety of the data record for variable pair screening purposes, while the values in Table 1 are computed over the known abnormal event period for evaluating event identifiability. Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (i.e., different slopes for before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. Note also how during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature (Figure 2A). A similar pattern is apparent for the BE-Bra and BE-Vie sites (Figure S1, S2).
+For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model and a strong event effect size (Table 1). Note that values in Table S1 are computed relative to the entirety of the data record for variable pair screening purposes, while the values in Table 1 are computed over the known abnormal event period for event identifiability purposes. Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (i.e., different slopes for before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. Note also how during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature (Figure 2A). A similar pattern is apparent for the BE-Bra and BE-Vie sites (Figure S1, S2).
 
 Despite the similar effect size at the three tower sites during the abnormal release event, they differed substantially in the degree to which they uniquely flagged the known release event. At the BE-Lon and BE-Vie sites, our event detection algorithm identified the known release and only a few other time periods as potential abnormal releases (Figure 3). Conversely, at the northerly BE-Bra site, the algorithm was not able to identify the known release event distinct from background noise. This can be seen in the rate of event detections ($\alpha$) at each site, calculated as the number of event detections divided by the total number of rolling windows in the period of record. This rate was less than 1\% at the BE-Lon and BE-Vie sites, but was greater than 2\% at the BE-Bra site. It is notable that this ability to uniquely detect the known release along with a plausible number of additional event detections corresponds with the fraction of the abnormal release period when the wind was pointed from the release location towards the respective tower. The fraction of the period of record where the wind was pointed from the facility toward the flux towers was much lower at the BE-Bra site (5\%) compared to the BE-Lon and BE-Vie sites (34\% Table 1). 
 
-To increase our confidence that event detections were not dependent on the specific hyperparameters settings in our base-case setup, we ran an exhaustive cross-validation set of hyperparameter experiments. For this effort, we tested every possible combination of values for wind tolerance, number of days, and the event quantile effect. Across reasonable values of specific hyperparameters, we found that their magnitudes had little effect on the rate at which events were flagged as potential abnormal releases as even in the most extreme cases, we did not see detection rates exceeding 1\%. We did, however, observe that the event detection was related to the window length and event quantile parameters as shown by the slope of the line in Figure 4. Although increasing values of the event quantile parameter above the limit of our tests ($>$ 0.9) would hypothetically increase event detection rates, we do not show this due to the noisiness of the extreme quantiles of effect size distributions. Additionally, we do not show tests setting this parameter below the median because it would lead to  weak sensitivity to abnormal events. In a similar fashion as the event quantile parameter, increasing the magnitude of the window length parameter would also likely increase the event detection rate but here too we do not show tests setting this parameter beyond 14 days given the results of prior atmospheric modeling efforts showing limited deposition at such long time scales \citep[e.g.][]{meszarosPredictabilityDispersionFukushimaderived2016}.
+To increase our confidence that event detections were not dependent on the specific hyperparameters settings in our base-case setup, we ran an exhaustive cross-validation set of hyperparameter experiments. For this effort, we tested every possible combination of values for wind tolerance, number of days, and the event quantile effect. Across reasonable values of specific hyperparameters, we found that their magnitudes had little effect on the rate at which events were flagged as potential abnormal releases as even in the most extreme cases, we did not see detection rates exceeding 1\%. We did, however, observe that the event detection was related to the window length and event quantile parameters as shown by the slope of the line in Figure 4. Although increasing values of the event quantile parameter above the limit of our tests ($>$ 0.9) would hypothetically increase event detection rates, we do not show this due to the noisiness of the extreme quantiles of effect size distributions. Additionally, we do not show tests setting this parameter below the median because it would lead to weak sensitivity to abnormal event detection. In a similar fashion as the event quantile parameter, increasing the magnitude of the window length parameter would also likely increase the event detection rate but here too we do not show tests setting this parameter beyond 14 days given the results of prior atmospheric modeling efforts showing limited deposition at such long time scales \citep[e.g.][]{meszarosPredictabilityDispersionFukushimaderived2016}.
 
 For the Fukushima case study, our objective was to test the sensitivity of our approach to a broad scale abnormal release and to introduce a control design to verify behavior on a flux tower where we expect no impact from any abnormal releases. First, we verified that event detection specificity is present at towers likely to be exposed even across long distances if the abnormal release is large (Figure 5). Then, we found a decrease in event detection specificity and an increase in event detection rate moving from the flux tower expected to be most affected (US-Wrc), to a more distant (likely less affected) tower (US-Gle), to a tower likely not exposed at all to the atmospheric plume (OZ-Mul, Figure 5).
 
@@ -185,7 +185,7 @@ For the Fukushima case study, our objective was to test the sensitivity of our a
 \section{Discussion}
 Using flux tower records collected closest to and in the prevailing wind direction to the IRE and the Fukushima release locations, our event detection algorithm was able to identify both known abnormal releases and plausible previously unidentified abnormal events. There was broad agreement among the closest flux tower and more distant flux towers as to the timing and frequency of these releases, and our approach was supported by the loss of signal at flux towers outside of the prevailing wind direction. This suggests that, at the very least, given a facility known to have a prior abnormal release, flux tower networks are capable of providing a means of passive monitoring to detect subsequent events as well as information on the environmental conditions before, during, and after the event. Furthermore, our approach has promise for situations when there is not a prior known abnormal release. In these cases, it may be possible to continuously mine flux tower records (as they become available) for events that exceed some threshold identified in a more comprehensive cross-site, cross-event benchmarking study. The delay between data collection and availability to the general community via data repositories (e.g., Fluxnet) is highly variable among sites and investigators. In the best case scenario, for actively monitored sites with responsive investigators, this can be as little as 6 months. As a result, operationalization of our approach might target post-hoc attribution rather than real-time monitoring applications.
 
-More generally, we show that flux tower records have value for this type of data mining despite the apparent noisiness of the data \citep[e.g., ][]{fratiniEddyCovarianceFlux2018}. We attribute the sensitivity of our approach to the fact that we fit successive interaction models to limited sections of the data record, and we leveraged bivariate relationships to constrain noisiness in individual data records. Our approach was aided by the fact that this type of scale-free data mining is largely unaffected by systematic errors due to uncertainty in calibration standards and/or low resolution in specific sensor packages deployed on the towers. This is because although such systematic errors may bias the magnitude of overall flux values, which would be a problem for typical uses of flux towers that deal directly in the units of the measured data, they do not reduce the overall confidence in individual values \citep{langfordEddycovarianceDataLow2015}, which for our purposes might represent an abnormal release signal. The ability of our approach to identify a suitable release signature does likely depend on the quality and completeness of the underlying data.
+More generally, we show that flux tower records have value for this type of data mining despite the apparent noisiness of the data \citep[e.g., ][]{fratiniEddyCovarianceFlux2018}. We attribute the sensitivity of our approach to the fact that we fit successive interaction models to limited sections of the data record, and we leveraged bivariate relationships to constrain noisiness in individual data records. This strategy of using only limited sections of the data is particularly important because it can avoid the situation where a well-defined linear relationship becomes non-linear and obscured at longer timescales. Despite the apparent success of our approach, it is not a perfect solution because some non-linearity remains. Beyond the noise inherent to most environmental data, this is likely one of the principal causes of the relatively modest $R^2$ values we observed in Table 1. These are not unusally low however as $R^2$ values between 0.35 and 0.7 are typical for environmental data \citep{murrayMethodsQuantifyVariable2009}. A fruitful area of future research would be exploring physical justifications for linearizing these relationships, which would likely lead to more precise signal recovery and event detection. Our approach was further aided by the fact that this type of scale-free data mining is largely unaffected by systematic errors due to uncertainty in calibration standards and/or low resolution in specific sensor packages deployed on the towers. This is because although such systematic errors may bias the magnitude of overall flux values, which would be a problem for typical uses of flux towers that deal directly in the units of the measured data, they do not reduce the overall confidence in individual values \citep{langfordEddycovarianceDataLow2015}, which for our purposes might represent an abnormal release signal. As a result, the ability of our approach to identify a suitable release signature does depend on the quality and completeness of the underlying data.
 
 Another contributor to the success of our approach was our ability to compare event detections at  close towers in prevailing wind directions against more distant towers (refer to Figure 1), increasing our confidence that we were seeing a true signal and not spurious noise. The relatively dense networks of flux towers with long data records leveraged in both locations also aided these case studies. This level of flux tower density may be found in the United States, Western/Central Europe, Japan, and Australia, which have high densities of flux towers, but not throughout the rest of the world \citep{baldocchi2001fluxnet,pastorello2020fluxnet2015}. As a result, this may impose geographical limits on our approach, although installation and maintenance of new flux towers in locations of interest may be cost effective compared to other monitoring approaches. Another attribute that likely aided our investigations was the fact that all three of the flux towers we examined were located in similar agricultural and forested ecosystem types for the IRE and Fukushima case studies respectively. Although investigating whether or not flux tower combinations with differing ecosystems would yield similar results is beyond the scope of the present study, we suspect that the data records among towers in disparate ecosystem types could differ too drastically to be of comparative use. For example, \citet{pastorello2020fluxnet2015} show that towers in the crop ecosystem type, of which all three sites used in this study belong, have a relatively narrow distribution of fluxes (i.e., gross primary production, GPP) compared to towers in the grassland or evergreen broadleaf forest types. One reason for this narrow spread in crop ecosystems may be the relative homogeneity of flux tower footprints in crop ecosystems, which typically extend to within 1000m of the tower depending on atmospheric conditions \citep[e.g., wind speed and direction,][]{chuRepresentativenessEddyCovarianceFlux2021}. Given that towers in other ecosystem types with a more heterogeneous flux tower footprint have a wider distribution of fluxes \citep[e.g.][]{pastorello2020fluxnet2015}, we suspect that having all the towers in the IRE case study located in a homogenous ecosystem type was helpful in reducing the spikiness and spread of the data. 
 
