--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -95,11 +95,11 @@ Detecting abnormal releases of radioactive material (hereafter simply “abnorma
 
 A potential alternative to active monitoring is passive monitoring \citep[e.g., the German Integrated Measuring and Information system and the International Monitoring System,][]{bieringerMonitoringGroundlevelAir2004}. Although existing wide area monitoring systems are already critical components of abnormal release detection and tracking programs \citep{mediciIMSRadionuclideNetwork2001}, diversification-of-approach may increase the programs' sensitivity and comprehensiveness. With a greater diversity of methods, monitoring programs may be able to detect a wider array of constituents with differing characteristics or expand their geographic extent without the need to deploy new instrumentation. In the present study, we developed a novel passive monitoring approach to supplement existing programs that involves the use of eddy covariance data to capture a signal from known abnormal releases. This signal is then used to investigate whether additional potential abnormal releases exist at other times in the data record. We focused on eddy flux towers, as they have the potential to provide abnormal release signatures, are globally distributed, have been in near continuous operation for several decades, and can be relatively cheaply and easily deployed in locations of interest. Therefore, they constitute a rich target for data mining approaches aimed at identifying signatures resulting from direct interference of radioactive material with target measurements and/or the indirect signal of vegetation responses to the deposition of radioactive material.
 
-Our utilization of flux tower records for event discrimination stands in contrast to the typical use of data from the towers for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange \citep{baldocchiInterannualVariabilityNet2018}, our use treats each variable as potentially including an indirect signal (i.e. an anomaly from normal vegetation behavior) of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation in a known way \citep{nobelPhysicochemicalEnvironmentalPlant2020}.
+Our utilization of flux tower records for event discrimination stands in contrast to the typical use of data from the towers for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange \citep{baldocchiInterannualVariabilityNet2018}, our use treats each variable as potentially including an indirect signal (i.e., an anomaly from normal vegetation behavior or expected carbon or water vapor fluxes) of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation in a known way \citep{nobelPhysicochemicalEnvironmentalPlant2020}.
 
 We specifically focused on short-term anomalies in the vegetation response data (on the order of days to weeks) due to either potential deposition of radioactive material or direct sensor effects rather than chronic long-term signals on the order of years to decades. In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium nominally occurring on August 23, 2008. This release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq $^{131}I$. The release went unreported (and possibly undetected) for several days. The first measurements in the vicinity of the facility were not taken until August 28th. These measurements found radioactivity levels of 5,000 Bq/kg in grass samples and led to a public health advisory for a 5km zone extending in a northeasterly direction from the facility \citep{carle2010individual}. Owing to the aforementioned measurement delays and the limited extent of the IRE release, we lack numeric estimates of the activity concentrations at tower locations. In the second case study, we further explored potential signals in flux tower data related to the Fukushima Nuclear Disaster occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere. An atmospheric dispersion study by \citet{meszarosPredictabilityDispersionFukushimaderived2016} estimates that our selected tower locations experienced deposition of particulate matter in the range of 0.44 - 31.08 $mBq/m^{3}$.
 
-We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, prior studies support the idea that exposure may cause declines in photosynthetic $CO_2$ uptake. For example, \citet{gudkovEffectIonizingRadiation2019} detail how a wide range of exposure doses and durations can inhibit CO2 uptake as a result of enzymatic effects on the Calvin Cycle. For the present study, we lack leaf-level observations to directly establish inhibition and instead express it as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
+We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, prior studies support the idea that exposure may cause declines in photosynthetic $CO_2$ uptake. For example, \citet{gudkovEffectIonizingRadiation2019} detail how a wide range of exposure doses and durations can inhibit CO2 uptake as a result of enzymatic effects on the Calvin Cycle. For the present study, we lack leaf-level observations to directly establish inhibition and instead express it indirectly as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure. A consequence of this indirect approach is that we cannot directly separate material deposition responses coming from vegetation apart from possible deposition interference with flux tower sensors.
 
 
 \section{Methods}
@@ -183,9 +183,9 @@ For the Fukushima case study, our objective was to test the sensitivity of our a
 \end{figure}
 
 \section{Discussion}
-Using flux tower records collected closest to and in the prevailing wind direction to the IRE and the Fukushima release locations, our event detection algorithm was able to identify both known abnormal releases and plausible previously unidentified abnormal events. There was broad agreement among the closest flux tower and more distant flux towers as to the timing and frequency of these releases, and our approach was supported by the loss of signal at flux towers outside of the prevailing wind direction. This suggests that, at the very least, given a facility known to have a prior abnormal release, flux tower networks are capable of providing a means of passive monitoring to detect subsequent events as well as information on the environmental conditions before, during, and after the event. Furthermore, our approach has promise for situations when there is not a prior known abnormal release. In these cases, it may be possible to continuously mine flux tower records (as they become available) for events that exceed some threshold identified in a more comprehensive cross-site, cross-event benchmarking study. The delay between data collection and availability to the general community via data repositories (e.g., Fluxnet) is highly variable among sites and investigators. In the best case scenario, for actively monitored sites with responsive investigators, this can be as little as 6 months. As a result, operationalization of our approach might target post-hoc attribution rather than real-time monitoring applications.
+Using flux tower records collected closest to and in the prevailing wind direction to the IRE and the Fukushima release locations, our event detection algorithm was able to identify both known abnormal releases and plausible previously unidentified abnormal events. There was broad agreement among the closest flux tower and more distant flux towers as to the timing and frequency of these releases, and our approach was supported by the loss of signal at flux towers outside of the prevailing wind direction. This suggests that, at the very least, given a facility known to have a prior abnormal release, flux tower networks are capable of providing a means of passive monitoring to detect subsequent events as well as information on the environmental conditions before, during, and after the event. Furthermore, our approach has promise for situations when there is not a prior known abnormal release. In these cases, it may be possible to continuously mine flux tower records (as they become available) for events that exceed some threshold identified in a more comprehensive cross-site, cross-event benchmarking study. The delay between data collection and availability to the general community via data repositories (e.g., Fluxnet) is highly variable among sites and investigators. In the best case scenario, for actively monitored sites with responsive investigators, this can be as little as 6 months. As a result, operationalization of our approach might target post-hoc attribution rather than real-time monitoring applications unless release protocols of flux data are increased in frequency.
 
-More generally, we show that flux tower records have value for this type of data mining despite the apparent noisiness of the data \citep[e.g., ][]{fratiniEddyCovarianceFlux2018}. We attribute the sensitivity of our approach to the fact that we fit successive interaction models to limited sections of the data record, and we leveraged bivariate relationships to constrain noisiness in individual data records. This strategy of using only limited sections of the data is particularly important because it can avoid the situation where a well-defined linear relationship becomes non-linear and obscured at longer timescales. Despite the apparent success of our approach, it is not a perfect solution because some non-linearity remains. Beyond the noise inherent to most environmental data, this is likely one of the principal causes of the relatively modest $R^2$ values we observed in Table 1. These are not unusally low however as $R^2$ values between 0.35 and 0.7 are typical for environmental data \citep{murrayMethodsQuantifyVariable2009}. A fruitful area of future research would be exploring physical justifications for linearizing these relationships, which would likely lead to more precise signal recovery and event detection. Our approach was further aided by the fact that this type of scale-free data mining is largely unaffected by systematic errors due to uncertainty in calibration standards and/or low resolution in specific sensor packages deployed on the towers. This is because although such systematic errors may bias the magnitude of overall flux values, which would be a problem for typical uses of flux towers that deal directly in the units of the measured data, they do not reduce the overall confidence in individual values \citep{langfordEddycovarianceDataLow2015}, which for our purposes might represent an abnormal release signal. As a result, the ability of our approach to identify a suitable release signature does depend on the quality and completeness of the underlying data.
+More generally, we show that flux tower records have value for this type of data mining despite the apparent noisiness of the data \citep[e.g., ][]{fratiniEddyCovarianceFlux2018}. We attribute the sensitivity of our approach to the fact that we fit successive interaction models to limited sections of the data record, and we leveraged bivariate relationships to constrain noisiness in individual data records. This strategy of using only limited sections of the data is particularly important because it can avoid the situation where a well-defined linear relationship becomes non-linear and obscured at longer timescales. Despite the apparent success of our approach, it is not a perfect solution because some non-linearity remains. Beyond the noise inherent to most environmental data, this is likely one of the principal causes of the relatively modest $R^2$ values we observed in Table 1. These are not unusally low however as $R^2$ values between 0.35 and 0.7 are typical for environmental data \citep{murrayMethodsQuantifyVariable2009}. A fruitful area of future research would be exploring physical justifications for including non-linear relationships, which would likely lead to more precise signal recovery and event detection. Our approach was further aided by the fact that this type of scale-free data mining is largely unaffected by systematic errors due to uncertainty in calibration standards and/or low resolution in specific sensor packages deployed on the towers. This is because although such systematic errors may bias the magnitude of overall flux values, which would be a problem for typical uses of flux towers that deal directly in the units of the measured data, they do not reduce the overall confidence in individual values \citep{langfordEddycovarianceDataLow2015}, which for our purposes might represent an abnormal release signal. As a result, the ability of our approach to identify a suitable release signature does depend on the quality and completeness of the underlying data.
 
 Another contributor to the success of our approach was our ability to compare event detections at  close towers in prevailing wind directions against more distant towers (refer to Figure 1), increasing our confidence that we were seeing a true signal and not spurious noise. The relatively dense networks of flux towers with long data records leveraged in both locations also aided these case studies. This level of flux tower density may be found in the United States, Western/Central Europe, Japan, and Australia, which have high densities of flux towers, but not throughout the rest of the world \citep{baldocchi2001fluxnet,pastorello2020fluxnet2015}. As a result, this may impose geographical limits on our approach, although installation and maintenance of new flux towers in locations of interest may be cost effective compared to other monitoring approaches. Another attribute that likely aided our investigations was the fact that all three of the flux towers we examined were located in similar agricultural and forested ecosystem types for the IRE and Fukushima case studies respectively. Although investigating whether or not flux tower combinations with differing ecosystems would yield similar results is beyond the scope of the present study, we suspect that the data records among towers in disparate ecosystem types could differ too drastically to be of comparative use. For example, \citet{pastorello2020fluxnet2015} show that towers in the crop ecosystem type, of which all three sites used in this study belong, have a relatively narrow distribution of fluxes (i.e., gross primary production, GPP) compared to towers in the grassland or evergreen broadleaf forest types. One reason for this narrow spread in crop ecosystems may be the relative homogeneity of flux tower footprints in crop ecosystems, which typically extend to within 1000m of the tower depending on atmospheric conditions \citep[e.g., wind speed and direction,][]{chuRepresentativenessEddyCovarianceFlux2021}. Given that towers in other ecosystem types with a more heterogeneous flux tower footprint have a wider distribution of fluxes \citep[e.g.][]{pastorello2020fluxnet2015}, we suspect that having all the towers in the IRE case study located in a homogenous ecosystem type was helpful in reducing the spikiness and spread of the data. 
 
